@@ -4,6 +4,7 @@ Changes
 1.2.2 (TBD)
 -----------
 
+- A regression in the merge tool's min and max methods has been fixed (#2145).
 - Support for GDAL's "sum" resampling algorith has been added (#2137).
 - Cython and numpy versions are pinned in pyproject.toml. Numpy versions
   correspond to scipy's oldest supported versions for Python versions 3.6-3.10.
